Fix items breaking layout if description too short

--- a/great-western-wine-theme/assets/scss/components/custom/_product-list.scss
+++ b/great-western-wine-theme/assets/scss/components/custom/_product-list.scss
@@ -35,6 +35,7 @@
 
                 .card-desc-cont {
                     display: inline-block;
+                    width: 100%;
                 }
 
                 .card-read-more {
